deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp-backend
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: myapp-backend
  template:
    metadata:
      labels:
        app: myapp-backend
    spec:
      containers:
        - name: myapp-backend
          image: 108641306373.dkr.ecr.eu-west-3.amazonaws.com/springdeploy-employee:latest
          ports:
            - containerPort: 8080
