service.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp-backend-service
  namespace: default  # Modifiez si nécessaire
spec:
  selector:
    app: myapp-backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: NodePort
